// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 1 expense correctly 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    $4.00
  </h3>
</div>
`;

exports[`should render ExpensesSummary with multiple correctly 1`] = `
<div>
  <h3>
    Viewing 
    5
     
    expenses
     totalling 
    $40.00
  </h3>
</div>
`;
